# 2nd-Start

./: .gitignore  package-lock.json  package.json
.claude/: settings.local.json
apps/optimizer/: pyproject.toml
apps/optimizer/app/: main.py
apps/optimizer/app/api/: bootstrap_routes.py  onboarding_routes.py  routes.py
apps/optimizer/app/bootstrap/: converter.py  discovery.py  fact_resolver.py  models.py  orchestrator.py  stabilizer.py  validator.py
apps/optimizer/app/brain/: __init__.py  conflicts.py  domain.py  explain.py  heuristic.py  profiles.py  solver.py  stats.py
apps/optimizer/app/models/: requests.py  responses.py
apps/optimizer/app/solver/: base_schedule.py  diagnostics.py  proposals.py  relaxation.py  seasons.py  templates.py  tie_break.py
apps/optimizer/examples/: cooperative_planners_input.json  infeasible_input.json  parallel_parenting_input.json  shift_work_input.json  single_parent_input.json
apps/optimizer/tests/bootstrap/: fixtures.py  test_converter.py  test_discovery.py  test_integration.py  test_permutation_determinism.py  test_stabilizer.py  test_validator.py
apps/optimizer/tests/brain/: fixtures.py  test_api.py  test_conflicts.py  test_explain.py  test_heuristic.py  test_multi_profile.py  test_profiles.py  test_solver.py  test_stats.py
apps/optimizer/tests/solver/: fixtures.py  test_determinism.py  test_diagnostics.py  test_relaxation.py  test_routine_behavior.py  test_scenarios.py  test_seasons.py  test_template_alignment.py  test_templates.py  test_tie_break.py
docker/: docker-compose.yml
docs/: API_REFERENCE.md  (+18 more)
(+475 files in other folders)
